src/main/resources/public/frontstyle.css
body {
font-family: Arial, sans-serif;
color: #2699FB;
margin: 0px;
}

a {
  text-decoration: none;
  color: #2699fb;
}

.grid {
  display: grid;
  height: auto;
  width: auto;
  grid-template-columns: 1fr 1fr 1fr 32.5vh;
  grid-template-rows: 1fr 1fr 1fr 1fr;
  grid-row-gap: 10px;
  padding: 0px 0px;
  grid-auto-flow: row;
  padding-top: 40px;
}

.storypreview {
  grid-area: auto / auto/ span 2/ span 1;
  border-bottom: 2px #7FC4FD solid;
  padding: 10px;
  margin-right: 10px;
}


.sidebar{
  grid-area: 1/ 4/ span 5 / span 1;
  background-color: #F1F9FF;
  padding-top: 10px;
  display: inline-flex;
  flex-direction: column;
  text-align: center;
}

.frontpage-story-preview {
  grid-area: auto / auto/ span 1/ span 1;
  border-bottom: 2px #7FC4FD solid;
  padding: 10px;
  margin-right: 10px;
}

.frontpage-story-preview:first-child {
 grid-area: 1 / 1/ span 1 / span 3;
 background-color: #7FC4FD;
 padding: 0px;
 margin-right: 0px;

}

.frontpage-story-preview:first-child img{
  height: fit;
  float: left;
  margin-right: 20px;
}

.frontpage-story-preview:first-child a{
 color: #ffffff;
}

.frontpage-story-preview:first-child p{
 color: #ffffff;
}

.story{
  grid-area: 1/2/span 3/span 1;
}

.bio {
    grid-area: 1/1/span 1/span 3;
    background-color: #7FC4FD;
    padding-left: 5vw;
    color: #ffffff;
    flex-direction: column;
    align-self: stretch;
    line-height: .5em;
    display: grid;
    align-items: center;
}

.inner-bio{
}

.category {
    grid-area: 1/1/span 1/span 1;
    background-color: #7FC4FD;
    padding-left: 5vw;
    color: #ffffff;
    flex-direction: column;
    align-self: stretch;
    line-height: .5em;
    display: grid;
    align-items: center;
}

.inner-category{
}

img {
  height: 15vw;
}

.profile {
  height: 14vh;
  width: auto;
  border-radius: 50%;
  float: left;
}

.hero {
  height: 60vh;
  width: auto;
}

.sidebarimage {
  width: 30vh;
  height: auto;
}

